<resources>

<!--  Name of the App  -->
    <string name="app_name">Pedal Tribe</string>

    <string name="label_google_sign_in">Firebase + Google Sign In</string>
    <string name="desc_google_sign_in">Use a Google Sign In credential to authenticate with Firebase.</string>

    <string name="label_facebook_login">Firebase + Facebook Login</string>
    <string name="desc_facebook_login">Use a Facebook Login credential to authenticate with Firebase.</string>

    <string name="label_emailpassword">Email/Password Authentication</string>
    <string name="desc_emailpassword">Use an email and password to authenticate with Firebase.</string>

    <string name="label_passwordless">Passwordless Authentication</string>
    <string name="desc_passwordless">Use only an email to authenticate with Firebase.</string>

    <string name="label_phone_auth">Phone Number Authentication</string>
    <string name="desc_phone_auth">Use a phone number to authenticate with Firebase.</string>

    <string name="label_anonymous_auth">Anonymous Authentication</string>
    <string name="desc_anonymous_auth">Sign in anonymously and then later upgrade to a full Firebase Auth user.</string>

    <string name="label_custom_auth">Custom Authentication</string>
    <string name="desc_custom_auth">Use a custom token signed by your own server to authenticate with Firebase.</string>

    <string name="label_firebase_ui">FirebaseUI Auth</string>
    <string name="desc_firebase_ui">Use the FirebaseUI-Android library to authenticate with Firebase.</string>

    <string name="label_generic_idp">Generic OAuth</string>
    <string name="desc_generic_idp">Use a generic OAuth identity provider, like Apple, Microsoft, Yahoo, or Twitter to authenticate with Firebase.</string>

    <string name="hint_user_id">User ID</string>
    <string name="get_custom_token">Get Token</string>
    <string name="sign_in">Sign In</string>
    <string name="create_account">Create Account</string>
    <string name="send_link">Send Link</string>
    <string name="sign_out">Sign Out</string>
    <string name="verify_email">Verify Email</string>
    <string name="disconnect">Disconnect</string>
    <string name="loading">Loading…</string>
    <string name="custom_token">Custom Token</string>
    <string name="signed_in">Signed In</string>
    <string name="signed_out">Signed Out</string>
    <string name="token_null">Token: null</string>
    <string name="desc_firebase_lockup">Firebase logo and name</string>
    <string name="auth_failed">Authentication failed</string>
    <string name="start_phone_auth">Start</string>
    <string name="verify_phone_auth">Verify</string>
    <string name="resend_phone_auth">Resend</string>
    <string name="hint_phone_number">Phone Number</string>
    <string name="hint_verification_code">Verification Code</string>
    <string name="status_code_sent">Code Sent</string>
    <string name="status_verification_failed">Verification failed</string>
    <string name="status_verification_succeeded">Verification succeeded</string>
    <string name="status_sign_in_failed">Sign-in failed</string>
    <string name="instant_validation">(instant validation)</string>

    <string name="firebase_status_fmt">Firebase UID: %s</string>
    <string name="firebase_user_management">Firebase User Management</string>

    <string name="google_status_fmt">Google User: %s</string>
    <string name="google_title_text">Google Sign In</string>

    <string name="facebook_status_fmt">Facebook User: %s</string>
    <string name="facebook_title_text">Facebook Login</string>

    <string name="emailpassword_status_fmt">Email User: %1$s (verified: %2$b)</string>
    <string name="emailpassword_title_text">Email and Password</string>

    <string name="passwordless_status_fmt">Email User: %1$s (verified: %2$b)</string>
    <string name="passwordless_title_text">Passwordless Sign In</string>
    <string name="status_email_not_sent">Send link to your email to get started.</string>
    <string name="status_email_sent">Link sent, check your email to continue.</string>
    <string name="status_link_found">Link received, enter email to sign in.</string>

    <string name="generic_title_text">OAuth Sign In</string>
    <string name="generic_signin_fmt">Sign In with %s</string>
    <string name="generic_status_fmt">User: %s (%s)</string>
    <string name="generic_label_provider">Provider:</string>

<!--  Testing  -->
    <string name="id_fmt">User ID: %s</string>
    <string name="email_fmt">Email: %s</string>

<!--  User Related Strings  -->
    <string name="update_profile"> Update Profile </string>
    <string name="email_field"> Email </string>
    <string name="password_field"> Password </string>
    <string name="username_field"> Username </string>
    <string name="location_field"> Location </string>
    <string name="f_name"> First Name </string>

<!--  user_sign_up.xml - Strings  -->
    <string name="sign_up_welcome"> Welcome to Pedal Tribe, \n the largest cycling community \n built for cyclists, by cyclists </string>
    <string name="old_account"> Already have an account? </string>
    <string name="sign_up_text"> Sign Up </string>
    <string name="error_sign_in_failed"> Uh-oh 😧 Sign In failed </string>

<!--  user_sign_in.xml - Strings  -->
    <string name="sign_in_welcome"> Welcome back pedal freak, </string>
    <string name="new_account"> Do not have an account? </string>
    <string name="sign_in_text"> Sign In </string>
    <string name="error_sign_up_failed"> Uh-oh 😧 account could not be created </string>
    
<!--  user_profile.xml - Strings  -->
    <string name="account_det_txt"> Account Details </string>
    <string name="fav_ads_txt"> Favorite Ads </string>
    <string name="my_ads_txt"> My Ads </string>
    <string name="pedal_T"> Pedal Tribe </string>
    <string name="sign_out_txt"> Sign Out </string>
    <string name="post_ad"> Post Ad </string>

<!--  post_ad.xml - Strings  -->
    <string name="ad_title"> Title </string>
    <string name="ad_desc"> Description </string>
    <string name="ad_price"> Price </string>
    <string name="ad_loc"> Item Location </string>
    <string name="ad_cond"> Item Condition </string>
    <string name="ad_age"> Item Age </string>

    <string name="select_img"> Select Images </string>
    <string name="upload"> Upload </string>



</resources>
