<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center" >

<!--  Progress Bar Setting  -->

    <ProgressBar
        android:id="@+id/progressBar"
        android:indeterminate="true"
        android:layout_width="match_parent"
        android:layout_height="10dp"
        android:visibility="invisible"
        style="?android:attr/progressBarStyleHorizontal" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/raleway_semibold"
            android:text="@string/sign_up_welcome"
            android:textAlignment="center"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="25sp"
            android:textStyle="bold"
            android:typeface="normal" />

<!--    User Input Fields   -->

<!--    Username Input    -->

        <EditText
            android:id="@+id/username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="50dp"
            android:layout_marginTop="50dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/border_input"
            android:ems="10"
            android:fontFamily="@font/raleway_semibold"
            android:hint="@string/username_field"
            android:inputType="textEmailAddress"
            android:padding="10dp"
            android:textAlignment="textStart" />

        <EditText
            android:id="@+id/userEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="50dp"
            android:layout_marginVertical="10dp"
            android:background="@drawable/border_input"
            android:ems="10"
            android:fontFamily="@font/raleway_semibold"
            android:hint="@string/email_field"
            android:inputType="textEmailAddress"
            android:padding="10dp"
            android:textAlignment="textStart" />

        <EditText
            android:id="@+id/userPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="50dp"
            android:layout_marginVertical="10dp"
            android:background="@drawable/border_input"
            android:ems="10"
            android:fontFamily="@font/raleway_semibold"
            android:hint="@string/password_field"
            android:inputType="textPassword"
            android:padding="10dp"
            android:textAlignment="textStart" />

        <EditText
            android:id="@+id/location_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="50dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="50dp"
            android:background="@drawable/border_input"
            android:ems="10"
            android:fontFamily="@font/raleway_semibold"
            android:hint="@string/location_field"
            android:inputType="textEmailAddress"
            android:padding="10dp"
            android:textAlignment="textStart" />

        <Button
            android:id="@+id/signUpButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/button_primary"
            android:fontFamily="@font/raleway_semibold"
            android:onClick="onClick"
            android:text="@string/sign_up_text"
            android:textAlignment="center"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="16sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="5dp"
                android:layout_marginVertical="25dp"
                android:fontFamily="@font/raleway_semibold"
                android:text="@string/old_account"
                android:textAlignment="center"
                android:textColor="@color/common_google_signin_btn_text_dark_focused"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/sign_In_HyperLink"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="5dp"
                android:layout_marginVertical="25dp"
                android:fontFamily="@font/raleway_semibold"
                android:text="@string/sign_in"
                android:textAlignment="center"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="16sp"
                android:textStyle="bold" />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>